--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                         <img src="icons/orcid.svg" alt="ORCID Icon" class="icon"> ORCID
                     </a>
                 </li>
+
+
             </ul>
         </aside>
 
@@ -117,16 +119,193 @@
                         <em>Neurocomputing</em>, vol. 564, Art. no. 126970, 2024. 
                         DOI: <a href="https://doi.org/10.1016/j.neucom.2023.126970" target="_blank">10.1016/j.neucom.2023.126970</a>.
                     </li>
+
+                    <li>
+                        Yangyang Zhou, <strong>Xin Kang</strong>, and Fuji Ren*, 
+                        "Prompt consistency for multi-label textual emotion detection," 
+                        <em>IEEE Transactions on Affective Computing</em>, vol. 15, no. 1, pp. 121-129, 2024. 
+                        DOI: <a href="https://doi.org/10.1109/TAFFC.2023.3254883" target="_blank">10.1109/TAFFC.2023.3254883</a>.
+                    </li>
+
+                    <li>
+                        Zheng Liu, <strong>Xin Kang</strong>, and Fuji Ren*, 
+                        "Dual-TBNet: Improving the robustness of speech features via dual-transformer-BiLSTM for speech emotion recognition," 
+                        <em>IEEE/ACM Transactions on Audio, Speech, and Language Processing</em>, vol. 31, pp. 2193-2203, 2023. 
+                        DOI: <a href="https://doi.org/10.1109/TASLP.2023.3282092" target="_blank">10.1109/TASLP.2023.3282092</a>.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang*</strong>, Xuefeng Shi, Yunong Wu, and Fuji Ren, 
+                        "Active learning with complementary sampling for instructing class-biased multi-label text emotion classification," 
+                        <em>IEEE Transactions on Affective Computing</em>, vol. 14, no. 1, pp. 523-536, 2023. 
+                        DOI: <a href="https://doi.org/10.1109/TAFFC.2020.3038401" target="_blank">10.1109/TAFFC.2020.3038401</a>.
+                    </li>
+
+                    <li>
+                        Fuji Ren*, Zheng Liu, and <strong>Xin Kang</strong>, 
+                        "An efficient framework for constructing speech emotion corpus based on integrated active learning strategies," 
+                        <em>IEEE Transactions on Affective Computing</em>, vol. 13, no. 4, pp. 1929-1940, 2022. 
+                        DOI: <a href="https://doi.org/10.1109/TAFFC.2022.3192899" target="_blank">10.1109/TAFFC.2022.3192899</a>.
+                    </li>
+
+                    <li>
+                        Zhiyang Li, Bin Li, Hongjun Ni*, Fuji Ren, Shuaishuai Lv*, and <strong>Xin Kang</strong>, 
+                        "An effective surface defect classification method based on RepVGG with CBAM attention mechanism (RepVGG-CBAM) for aluminum profiles," 
+                        <em>Metals</em>, vol. 12, no. 11, Art. no. 1809, 2022. 
+                        DOI: <a href="https://doi.org/10.3390/met12111809" target="_blank">10.3390/met12111809</a>.
+                    </li>
+
+                    <li>
+                        Zheng Liu, <strong>Xin Kang</strong>, Shun Nishide, and Fuji Ren*, 
+                        "Vowel priority lip matching scheme and similarity evaluation model based on humanoid robot Ren-Xin," 
+                        <em>Journal of Ambient Intelligence and Humanized Computing</em>, vol. 13, no. 11, pp. 5055-5066, 2022. 
+                        DOI: <a href="https://doi.org/10.1007/s12652-020-02175-9" target="_blank">10.1007/s12652-020-02175-9</a>.
+                    </li>
+
+                    <li>
+                        Jiaqiao Zhang, <strong>Xin Kang</strong>, Hongjun Ni*, and Fuji Ren, 
+                        "Surface defect detection of steel strips based on classification priority YOLOv3-dense network," 
+                        <em>Ironmaking & Steelmaking</em>, vol. 48, no. 5, pp. 547-558, 2021. 
+                        DOI: <a href="https://doi.org/10.1080/03019233.2020.1816806" target="_blank">10.1080/03019233.2020.1816806</a>.
+                    </li>
+
+                    <li>
+                        Wenjie Liu, Guoqing Wu*, Fuji Ren*, and <strong>Xin Kang</strong>, 
+                        "DFF-ResNet: An insect pest recognition model based on residual networks," 
+                        <em>Big Data Mining and Analytics</em>, vol. 3, no. 4, pp. 300-310, 2020. 
+                        DOI: <a href="https://doi.org/10.26599/BDMA.2020.9020021" target="_blank">10.26599/BDMA.2020.9020021</a>.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang*</strong>, Yunong Wu, and Fuji Ren, 
+                        "Toward action comprehension for searching: Mining actionable intents in query entities," 
+                        <em>Journal of the Association for Information Science and Technology</em>, vol. 71, no. 2, pp. 143-157, 2020. 
+                        DOI: <a href="https://doi.org/10.1002/asi.24220" target="_blank">10.1002/asi.24220</a>.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang*</strong>, Fuji Ren, and Yunong Wu, 
+                        "Exploring latent semantic information for textual emotion recognition in blog articles," 
+                        <em>IEEE/CAA Journal of Automatica Sinica</em>, vol. 5, no. 1, pp. 204-216, 2018. 
+                        DOI: <a href="https://doi.org/10.1109/JAS.2017.7510421" target="_blank">10.1109/JAS.2017.7510421</a>.
+                    </li>
+
+                    <li>
+                        Fuji Ren, <strong>Xin Kang*</strong>, and Changqin Quan, 
+                        "Examining accumulated emotional traits in suicide blogs with an emotion topic model," 
+                        <em>IEEE Journal of Biomedical and Health Informatics</em>, vol. 20, no. 5, pp. 1384-1396, 2016. 
+                        DOI: <a href="https://doi.org/10.1109/JBHI.2015.2459683" target="_blank">10.1109/JBHI.2015.2459683</a>.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang*</strong>, Fuji Ren, and Yunong Wu, 
+                        "Semisupervised learning of author-specific emotions in micro-blogs," 
+                        <em>IEEJ Transactions on Electrical and Electronic Engineering</em>, vol. 11, no. 6, pp. 768-775, 2016. 
+                        DOI: <a href="https://doi.org/10.1002/tee.22302" target="_blank">10.1002/tee.22302</a>.
+                    </li>
+
+                    <li>
+                        Yan Sun, Changqin Quan*, <strong>Xin Kang</strong>, Zuopeng Zhang, and Fuji Ren, 
+                        "Customer emotion detection by emotion expression analysis on adverbs," 
+                        <em>Information Technology and Management</em>, vol. 16, no. 4, pp. 303-311, Dec. 2015. 
+                        DOI: <a href="https://doi.org/10.1007/s10799-014-0204-2" target="_blank">10.1007/s10799-014-0204-2</a>.
+                    </li>
+
+                    <li>
+                        Fuji Ren and <strong>Xin Kang*</strong>, 
+                        "Employing hierarchical Bayesian networks in simple and complex emotion topic analysis," 
+                        <em>Computer Speech & Language</em>, vol. 27, no. 4, pp. 943-968, 2013. 
+                        DOI: <a href="https://doi.org/10.1016/j.csl.2012.07.012" target="_blank">https://doi.org/10.1016/j.csl.2012.07.012</a>.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang</strong> and Fuji Ren*, 
+                        "Predicting complex word emotions and topics through a hierarchical Bayesian network," 
+                        <em>China Communications</em>, vol. 9, no. 3, pp. 99-109, 2012. 
+                    </li>
                 </ul>
 
                 <h3>Conference Papers</h3>
                 <ul>
+                    <li>
+                        <strong>Xin Kang</strong>, Zhifei Zhang, Jiazheng Zhou, Yunong Wu, Xuefeng Shi, and Kazuyuki Matsumoto, 
+                        "TMAK-Plus at SIGHAN-2024 dimABSA Task: Multi-Agent Collaboration for Transparent and Rational Sentiment Analysis," 
+                        in <em>Proceedings of the SIGHAN Workshop at the 62nd Annual Meeting of the Association for Computational Linguistics</em>, 
+                        Bangkok, Thailand, Aug. 2024, pp. 88-95.
+                    </li>
+
+                    <li>
+                        <strong>Xin Kang</strong>, Veronika Shteingardt, Yuhan Wang, and Dov Dori, 
+                        "Neuro-Conceptual Artificial Intelligence: Integrating OPM with Deep Learning to Enhance Question Answering Quality," 
+                        in <em>Proceedings of the NeusymBridge Workshop at the 31st International Conference on Computational Linguistics</em>, 
+                        Abu Dhabi, UAE, Jan. 2025, pp. 71-85.
+                    </li>
+
+                    <li>
+                        Linhuang Wang, <strong>Xin Kang</strong>, Fei Ding, Haitao Yu, Yunong Wu, Kazuyuki Matsumoto, Satoshi Nakagawa, and Fuji Ren, 
+                        "Self Decoupling-Reconstruction Network for Facial Expression Recognition," 
+                        in <em>Proceedings of the International Joint Conference on Neural Networks (IJCNN)</em>, 
+                        Yokohama, Japan, July 2024, pp. 1-8.
+                    </li>
+
+                    <li>
+                        Linhuang Wang, <strong>Xin Kang</strong>, Fei Ding, Satoshi Nakagawa, and Fuji Ren, 
+                        "MSSTNet: A Multi-Scale Spatio-Temporal CNN-Transformer Network for Dynamic Facial Expression Recognition," 
+                        in <em>Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, 
+                        Seoul, Korea, April 2024, pp. 3015-3019.
+                    </li>
+
+                    <li>
+                        Daiki Mori, Kazuyuki Matsumoto, <strong>Xin Kang</strong>, Manabu Sasayama, and Keita Kiuchi, 
+                        "SMACS: Stress Management AI Chat System," 
+                        in <em>Proceedings of the 16th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management - Volume 2: KEOD</em>, 
+                        Porto, Portugal, 17-19 Nov. 2024, pp. 167-174.
+                    </li>
+
+                    <li>
+                        Yuxiang Zhou, <strong>Xin Kang</strong>, Fuji Ren, Satoshi Nakagawa, and Xiao Shan, 
+                        "DEU-Net: Dual Encoder U-Net for 3D Medical Image Segmentation," 
+                        in <em>Proceedings of the IEEE International Conference on Trust, Security and Privacy in Computing and Communications (TrustCom)</em>, 
+                        Los Alamitos, CA, USA, November 2023, pp. 2735-2741.
+                    </li>
+
+                    <li>
+                        Linhuang Wang, <strong>Xin Kang</strong>, Satoshi Nakagawa, and Fuji Ren, 
+                        "CenterMatch: A Center Matching Method for Semi-Supervised Facial Expression Recognition," 
+                        in <em>Proceedings of the Chinese Conference on Pattern Recognition and Computer Vision (PRCV)</em>, 
+                        Xiamen, China, October 2023, pp. 371-383.
+                    </li>
+<!--
+                    <li>
+                        <strong>Xin Kang</strong> and Fuji Ren, 
+                        "Understanding Blog Author's Emotions with Hierarchical Bayesian Models," 
+                        in <em>Proceedings of the IEEE 13th International Conference on Networking, Sensing, and Control (ICNSC)</em>, 
+                        Mexico City, Mexico, May 2016, pp. 1-8.
+                    </li>
+
+                    <li>
+                        Xin Kang, Yunong Wu, and Zhifei Zhang, 
+                        "Learning Salient Samples and Distributed Representations for Topic-Based Chinese Message Polarity Classification," 
+                        in <em>Proceedings of the SIGHAN Workshop at the Annual Meeting of the Association for Computational Linguistics</em>, 
+                        Beijing, China, July 2015, pp. 68-73.
+                    </li>
+-->
                 </ul>
 
                 <h3>Books</h3>
                 <ul>
-                    <li><a href="#">A Gentle Introduction to Deep Learning</a> - Sotechsha Co., Ltd., 2018</li>
-                    <li><a href="#">Artificial Intelligence with Uncertainty</a> - NTS Co., Ltd., 2017</li>
+                    <li>
+                        Hiroki Tanioka and <strong>Xin Kang</strong>, <em>A Gentle Introduction to Deep Learning</em> (Chinese Edition), Faces Publications, Beijing, China, pp. 114-239, Jan. 2019.
+                    </li>
+                    <li>
+                        Hiroki Tanioka and <strong>Xin Kang</strong>, <em>A Gentle Introduction to Deep Learning</em> (Korean Edition), WIKIBOOK, Seoul, Korea, pp. 135-231, Oct. 2018.
+                    </li>
+                    <li>
+                        Hiroki Tanioka and <strong>Xin Kang</strong>, <em>A Gentle Introduction to Deep Learning</em> (Japanese Edition), Sotechsha Co., Ltd., Tokyo, Japan, pp. 114-239, Feb. 2018.
+                    </li>
+                    <li>
+                        Deyi Li, Yi Du, Fuji Ren, Shun Nishide, Kazuyuki Matsumoto, <strong>Xin Kang</strong>, Duo Feng, and Mengjia He, <em>Artificial Intelligence with Uncertainty</em>, NTS Co., Ltd., Tokyo, Japan, pp. 1-26, 183-228, Apr. 2017.
+                    </li>
                 </ul>
             </section>
 
