Updated local files

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         Fu-Ji Ren, Yang-Yang Zhou, Jia-Wen Deng, Kazuyuki Matsumoto, Duo Feng, Tian-Hao She, 
                         Zi-Yun Jiao, Zheng Liu, Tai-Hao Li, Satoshi Nakagawa, and <strong>Xin Kang*</strong>, 
                         "Tracking emotions using an evolutionary model of mental state transitions: Introducing a new paradigm," 
-                        <em>Intelligent Computing</em>, vol. 3, Art. no. 0075, 2024. 
+                        <em>Intelligent Computing (A Science Partner Journal)</em>, vol. 3, Art. no. 0075, 2024. 
                         DOI: <a href="https://doi.org/10.34133/icomputing.0075" target="_blank">10.34133/icomputing.0075</a>.
                     </li>
 
