Updated local files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#publications">Publications</a></li>
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#awards">Awards</a></li>
         </ul>
     </nav>
 
@@ -27,8 +27,12 @@
             </div>
             <h2>Dr. Xin Kang</h2>
             <p>Associate Professor</p>
-            <p>Computer Science, Faculty of Science and Technology, Tokushima University</p>
+            <p>Department of Computer Science, Faculty of Science and Technology, Tokushima University</p>
             <ul class="contact-info">
+                <li>
+                    <img src="icons/location.svg" alt="Location Icon" class="icon">
+                    2-1, Minamijyousanjima-cho, Tokushima, 770-8506, Japan
+                </li>
                 <li>
                     <a href="mailto:kang-xin@tokushima-u.ac.jp">
                         <img src="icons/email.svg" alt="Email Icon" class="icon"> Email
@@ -53,7 +57,7 @@
         <main class="content">
             <section id="about">
                 <h2>About Me</h2>
-                <p>Dr. Xin Kang is an Associate Professor of Computer Science in the Faculty of Science and Technology, Tokushima University, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. His research interests include Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the Cognitive Robotics journal and is a member of IEEE, ACM, ACL, and CAAI.</p>
+                <p>Dr. Xin Kang is an Associate Professor in the Department of Computer Science, Faculty of Science and Technology, <a href="https://www.tokushima-u.ac.jp/english/" target="_blank">Tokushima University</a>, Japan. He received his PhD in Systems Innovation Engineering from Tokushima University in 2013. Dr. Kang supervises PhD, Master’s, and 4th-year undergraduate students, guiding research projects in Affective Computing, Neuro-Symbolic AI, Multimodal Machine Learning, and Knowledge Engineering. He has published over 100 papers in prestigious peer-reviewed journals and conferences. Dr. Kang serves on the editorial board of the journal Cognitive Robotics and is a member of IEEE, ACM, ACL, and CAAI.</p>
             </section>
 
             <section id="interests">
@@ -230,21 +234,21 @@
                     <li>
                         <strong>Xin Kang</strong>, Zhifei Zhang, Jiazheng Zhou, Yunong Wu, Xuefeng Shi, and Kazuyuki Matsumoto, 
                         "TMAK-Plus at SIGHAN-2024 dimABSA Task: Multi-Agent Collaboration for Transparent and Rational Sentiment Analysis," 
-                        in <em>Proceedings of the SIGHAN Workshop at the 62nd Annual Meeting of the Association for Computational Linguistics</em>, 
+                        in <em>Proceedings of the SIGHAN Workshop at the 62nd Annual Meeting of the Association for Computational Linguistics (ACL)</em>, 
                         Bangkok, Thailand, Aug. 2024, pp. 88-95.
                     </li>
 
                     <li>
                         <strong>Xin Kang</strong>, Veronika Shteingardt, Yuhan Wang, and Dov Dori, 
                         "Neuro-Conceptual Artificial Intelligence: Integrating OPM with Deep Learning to Enhance Question Answering Quality," 
-                        in <em>Proceedings of the NeusymBridge Workshop at the 31st International Conference on Computational Linguistics</em>, 
+                        in <em>Proceedings of the NeusymBridge Workshop at the 31st International Conference on Computational Linguistics (COLING)</em>, 
                         Abu Dhabi, UAE, Jan. 2025, pp. 71-85.
                     </li>
 
                     <li>
                         Linhuang Wang, <strong>Xin Kang</strong>, Fei Ding, Haitao Yu, Yunong Wu, Kazuyuki Matsumoto, Satoshi Nakagawa, and Fuji Ren, 
                         "Self Decoupling-Reconstruction Network for Facial Expression Recognition," 
-                        in <em>Proceedings of the International Joint Conference on Neural Networks (IJCNN)</em>, 
+                        in <em>Proceedings of the IEEE International Joint Conference on Neural Networks (IJCNN)</em>, 
                         Yokohama, Japan, July 2024, pp. 1-8.
                     </li>
 
@@ -258,7 +262,7 @@
                     <li>
                         Daiki Mori, Kazuyuki Matsumoto, <strong>Xin Kang</strong>, Manabu Sasayama, and Keita Kiuchi, 
                         "SMACS: Stress Management AI Chat System," 
-                        in <em>Proceedings of the 16th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management - Volume 2: KEOD</em>, 
+                        in <em>Proceedings of the 16th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management (IC3K)</em>, 
                         Porto, Portugal, 17-19 Nov. 2024, pp. 167-174.
                     </li>
 
@@ -313,11 +317,11 @@
                 <h2>Teaching</h2>
                 <h3>Undergraduate Courses</h3>
                 <ul>
-                    <li>Software Design and Experiment</li>
                     <li>STEM Practice</li>
-                    <li>Introduction to Science and Technology</li>
-                    <li>Introduction to Intelligent Information</li>
+                    <li>Software Design and Experiment</li>
                     <li>Technical English Fundamentals (2)</li>
+                    <li>Introduction to Intelligent Information</li>
+                    <li>Introduction to Science and Technology</li>
                     <li>Information Technology and the Workplace</li>
                     <li>SIH (Strike while the Iron is Hot) Training</li>
                 </ul>
@@ -325,37 +329,87 @@
                 <h3>Graduate Courses</h3>
                 <ul>
                     <li>Data Science</li>
+                    <li>Advanced Machine Translation</li>
                     <li>Graduate Seminar on Computer Science</li>
                     <li>Research Approaches in Science and Technology (E)</li>
-                    <li>Advanced Machine Translation</li>
                 </ul>
             </section>
 
             <section id="services">
                 <h2>Professional Services</h2>
+
                 <h3>Memberships</h3>
                 <ul>
-                    <li>Member, IEEE</li>
-                    <li>Member, ACM</li>
-                    <li>Member, CAAI</li>
+                    <li>Member, Institute of Electrical and Electronics Engineers (IEEE)</li>
+                    <li>Member, Association for Computing Machinery (ACM)</li>
+                    <li>Member, Association for Computational Linguistics (ACL)</li>
+                    <li>Member, Chinese Association for Artificial Intelligence (CAAI)</li>
                 </ul>
 
                 <h3>Editorship</h3>
                 <ul>
-                    <li>Associate Editor, Cognitive Robotics</li>
+                    <li>Editorial Board Member, <i>Cognitive Robotics</i> (2021–Present)</li>
+                    <li>Editorial Board Member, <i>International Journal of Advanced Intelligence</i> (2015–2022)</li>
                 </ul>
 
-                <h3>Reviewer</h3>
+                <h3>Professional Services</h3>
                 <ul>
-                    <li>IEEE Transactions on Affective Computing</li>
-                    <li>Neurocomputing</li>
-                    <li>IEEE Internet of Things Journal</li>
+                    <li>Area Chair, <i>The 31st International Conference on Computational Linguistics (COLING 2025)</i></li>
+                    <!-- <li>Reviewer, <i>2025 IEEE International Joint Conference on Neural Networks (IJCNN 2025)</i></li> -->
+                    <li>Reviewer, <i>2025 IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2025)</i></li>
+                    <li>Invited Talk, <a href="https://www.ieice.org/publications/ken/summary.php?contribution_id=131136&society_cd=ISS&ken_id=IE&year=2024&presen_date=2024-06-28&schedule_id=8277&lang=en&expandable=3" target="_blank">
+                        Utilization of Next-Generation AI-Integrated Digital Biomarkers</a>, <i>IEICE Technical Committee on Information Theory</i>, June 28, 2024.
+                    </li>
+                    <li>Program Committee Member, <i>8th International Conference on Natural Language Processing and Information Retrieval</i>, 2024</li>
+                    <li>Program Committee Member, <i>5th International Conference on Financial Technology</i>, 2024</li>
+                    <li>Program Committee Member, <i>17th NTCIR Conference on Evaluation of Information Access Technologies</i>, 2023</li>
+                    <li>Program Committee Member, <i>7th International Conference on Natural Language Processing and Information Retrieval</i>, 2023</li>
+                    <li>Program Committee Member, <i>6th International Conference on Natural Language Processing and Information Retrieval</i>, 2022</li>
+                    <li>Program Committee Member, <i>4th International Conference on Natural Language Processing</i>, 2022</li>
+                    <li>General Secretary, <i>16th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2021</li>
+                    <li>General Secretary, <i>15th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2020</li>
+                    <li>General Secretary, <i>14th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2019</li>
+                    <li>General Secretary, <i>13th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2018</li>
+                    <li>General Secretary, <i>12th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2017</li>
+                    <li>General Secretary, <i>11th International Conference on Natural Language Processing and Knowledge Engineering (NLP-KE)</i>, 2016</li>
+                </ul>
+
+                <h3>Reviewers</h3>
+                <ul>
+                    <li><i>Research</i> (A Science Partner Journals)</li>
+                    <li><i>Intelligent Computing</i> (A Science Partner Journals)</li>
+                    <li><i>IEEE Internet of Things Journal</i> (IEEE)</li>
+                    <li><i>IEEE Transactions on Affective Computing</i> (IEEE)</li>
+                    <li><i>IEEE Transactions on Emerging Topics in Computational Intelligence</i> (IEEE)</li>
+                    <li><i>Pattern Recognition</i> (Elsevier)</li>
+                    <li><i>Applied Soft Computing</i> (Elsevier)</li>
+                    <li><i>Computers in Biology and Medicine</i> (Elsevier)</li>
+                    <li><i>Neurocomputing</i> (Elsevier)</li>
+                    <li><i>Measurement: Sensors</i> (Elsevier)</li>
+                    <li><i>Cognitive Robotics</i> (Elsevier)</li>
+                    <li><i>IEICE Transactions on Information and Systems</i> (IEICE)</li>
+                    <li><i>IEEJ Transactions on Electrical and Electronic Engineering</i> (IEEJ)</li>
                 </ul>
             </section>
 
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>You can reach me through the provided links above.</p>
+            <section id="awards">
+                <h2>Awards</h2>
+                <ul>
+                    <li><strong>2024:</strong> Health Technology Award for "Next-Generation AI-Powered Digital Biomarkers," Tokushima Business Challenge Expo Committee, Japan</li>
+                    <li><strong>2023:</strong> First Ranking, FinArg-1 Task at the NTCIR Conference on Evaluation of Information Access Technologies</li>
+                    <li><strong>2022:</strong> First Ranking, Early Depression Detection in the eRisk Task at the Conference and Labs of Evaluation Forum (CLEF)</li>
+                    <li><strong>2022:</strong> First Ranking, DialEval-2 Task at the NTCIR Conference on Evaluation of Information Access Technologies</li>
+                    <li><strong>2021:</strong> Outstanding Member, Chinese Association for Artificial Intelligence</li>
+                    <li><strong>2020:</strong> First Ranking, DialEval-1 Task at the NTCIR Conference on Evaluation of Information Access Technologies</li>
+                    <li><strong>2020:</strong> Best Contribution Award, International Conference on Natural Language Processing and Knowledge Engineering</li>
+                    <li><strong>2019:</strong> Best Presentation Award for the paper "Building Label-Balanced Emotion Corpus Based on Active Learning for Text Emotion Classification," International Symposium on Artificial Intelligence and Robotics</li>
+                    <li><strong>2017:</strong> Best Paper Award for the paper "Learning Efficient Drawing Sequence Through Training of Recurrent Neural Network Model," International Conference on Natural Language Processing and Knowledge Engineering</li>
+                    <li><strong>2014:</strong> First Ranking, Temporalia Task at the NTCIR Conference on Evaluation of Information Access Technologies</li>
+                    <li><strong>2013:</strong> International Exchange Research Award, Tokushima University</li>
+                    <li><strong>2011:</strong> Best Paper Award, International Conference on Natural Language Processing and Knowledge Engineering</li>
+                    <li><strong>2009:</strong> Japanese Government Scholarship, Japan Society for the Promotion of Science (JSPS)</li>
+                    <li><strong>2005:</strong> Honorable Mention, The Mathematical Contest in Modeling (MCM)</li>
+                </ul>
             </section>
         </main>
     </div>
