update homepage html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                 <h3>Journal Papers</h3>
                 <ul>
                     <li>
+                        Xuefeng Shi, Weiping Ding*, Min Hu, <strong>Xin Kang</strong>, and Fuji Ren,
+                        "Fuzzy Humanized Sentiment Knowledge Enhanced Dependency Graphs Implementing with Aspect-based Sentiment Analysis,"
+                        <em>IEEE Transactions on Fuzzy Systems</em>, vol. –, no. –, pp. 1–13, 2025.
+                        DOI: <a href="https://doi.org/10.1109/TFUZZ.2025.3583050" target="_blank">10.1109/TFUZZ.2025.3583050</a>.
+                    </li>
+                    <li>
                         Xuefeng Shi*, Ming Yang, Min Hu, Fuji Ren, <strong>Xin Kang</strong>, and Weiping Ding, 
                         "Affective knowledge assisted bi-directional learning for Multi-modal Aspect-based Sentiment Analysis," 
                         <em>Computer Speech & Language</em>, vol. 91, Art. no. 101755, 2025. 
