--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                 <h3>Journal Papers</h3>
                 <ul>
                     <li>
+                        Jiazheng Zhou, <strong>Xin Kang</strong>, Weiping Ding, Linhuang Wang, Fei Ding, Kazuyuki Matsumoto, Chenmeng Zhang, and Huiwen Chi,
+                        "SAGE-Net: Single-layer augmented gated encoder network for efficient multimodal sentiment analysis,"
+                        <em>Applied Soft Computing</em>, vol. 184, Art. no. 113665, 2025.
+                        DOI: <a href="https://doi.org/10.1016/j.asoc.2025.113665" target="_blank">10.1016/j.asoc.2025.113665</a>.
+                    </li>
+                    <li>
                         Xuefeng Shi, Weiping Ding*, Min Hu, <strong>Xin Kang</strong>, and Fuji Ren,
                         "Fuzzy Humanized Sentiment Knowledge Enhanced Dependency Graphs Implementing with Aspect-based Sentiment Analysis,"
                         <em>IEEE Transactions on Fuzzy Systems</em>, vol. –, no. –, pp. 1–13, 2025.
