--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <h2>Research Interests</h2>
                 <ul>
                     <li><strong>Affective Computing:</strong> Complex Emotion Recognition, Depression Detection, Aspect-Based Sentiment Analysis</li>
-                    <li><strong>Neuro-Symbolic AI:</strong> Transparent AI, Agentic AI, Fuzzy Logic</li>
-                    <li><strong>Multimodal Machine Learning:</strong> Video-Speech-Text Alignment, Large Multimodal Models</li>
+                    <li><strong>Neuro-Symbolic AI:</strong> Neuro-Conceptual AI, Transparent AI, Agentic AI</li>
+                    <li><strong>Multimodal Machine Learning:</strong> Multimodal Alignment, Large Multimodal Models</li>
                     <li><strong>Knowledge Engineering:</strong> Semantic Information Extraction, Conceptual Modeling, Object-Process Methodology</li>
                 </ul>
             </section>
