--- a/index.html
+++ b/index.html
@@ -360,8 +360,10 @@
 
                 <h3>Editorship</h3>
                 <ul>
+                    <li>Youth Editor, <i>Chinese Journal of Information Fusion</i> (2025–Present)</li>
+                    <li>Special Issue Editor, <i>Artificial Intelligence in Health</i> (2025–Present)</li>
                     <li>Editorial Board Member, <i>Cognitive Robotics</i> (2021–Present)</li>
-                    <li>Editorial Board Member, <i>International Journal of Advanced Intelligence</i> (2015–2022)</li>
+                    <li>Editorial Board Member, <i>International Journal of Advanced Intelligence</i> (2015–Present)</li>
                 </ul>
 
                 <h3>Professional Services</h3>
