--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <!-- <li>Reviewer, <i>2025 IEEE International Joint Conference on Neural Networks (IJCNN 2025)</i></li> -->
                     <li>Reviewer, <i>2025 IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2025)</i></li>
                     <li>Invited Talk, <a href="https://www.ieice.org/publications/ken/summary.php?contribution_id=131136&society_cd=ISS&ken_id=IE&year=2024&presen_date=2024-06-28&schedule_id=8277&lang=en&expandable=3" target="_blank">
-                        Utilization of Next-Generation AI-Integrated Digital Biomarkers</a>, <i>IEICE Technical Committee on Information Theory</i>, June 28, 2024.
+                        Transparency in the dimABSA Task with Neuro-Symbolic and Generative AI</a>, <i>IEICE Technical Committee on Information Theory</i>, June 28, 2024.
                     </li>
                     <li>Program Committee Member, <i>8th International Conference on Natural Language Processing and Information Retrieval</i>, 2024</li>
                     <li>Program Committee Member, <i>5th International Conference on Financial Technology</i>, 2024</li>
