--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
                 <h3>Conference Papers</h3>
                 <ul>
                     <li>
+                        Hai-Tao Yu, Dawei Li, and <strong>Xin Kang</strong>,
+                        "<a href="https://link.springer.com/chapter/10.1007/978-981-95-3453-1_20" target="_blank">
+                        Emotional Earth Mover's Distance for Fine-Grained Hierarchical Emotion Analysis</a>,"
+                        in <em>Proceedings of the 20th International Conference on Advanced Data Mining and Applications (ADMA)</em>,
+                        Singapore, Springer, 2026, pp. 296–310.
+                    </li>
+                    <li>
                         <strong>Xin Kang</strong>, Veronika Shteingardt, Yuhan Wang, and Dov Dori, 
                         "Neuro-Conceptual Artificial Intelligence: Integrating OPM with Deep Learning to Enhance Question Answering Quality," 
                         in <em>Proceedings of the NeusymBridge Workshop at the 31st International Conference on Computational Linguistics (COLING)</em>, 
