--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         Hai-Tao Yu, Dawei Li, and <strong>Xin Kang</strong>,
                         "Emotional Earth Mover's Distance for Fine-Grained Hierarchical Emotion Analysis,"
                         in <em>Proceedings of the 20th International Conference on Advanced Data Mining and Applications (ADMA)</em>,
-                        Singapore, Springer, 2026, pp. 296–310.
+                        Kyoto, Japan, Oct. 2026, pp. 296–310.
                     </li>
 
                     <li>
